XIVY-3334 refactor: migrate deprecated jdk api